<resources>
    <string name="app_name">Logkar Mobile Challenge</string>
    <string name="nama_pengirim_label">Nama Pengirim (Nama Lengkap)</string>
    <string name="no_hp_label">Nomor Handphone Pengirim</string>
    <string name="no_hp_receiver_label">Nomor Handphone Penerima</string>
    <string name="kecamatan_label">Kecamatan</string>
    <string name="alamat_label">Alamat Detail</string>
    <string name="nama_pengirim_hint">Masukkan Nama Pengirim</string>
    <string name="nama_penerima_hint">Masukkan Nama Penerima</string>
    <string name="country_code">+62</string>
    <string name="handphone_hint">Nomor Handphone Pengirim</string>
    <string name="handphone_reveiver_hint">Nomor Handphone Penerima</string>
    <string name="kecamatan_hint">Masukkan Lokasi</string>
    <string name="alamat_hint">(Cth: Rumah No.2 / Gedung berwarna hijau)</string>
    <string name="nama_receiver_label">Nama Penerima (Nama Lengkap)</string>
    <string name="tipe_truk_label">Tipe Truk</string>
    <string name="kapasitas_label">Kapasitas</string>
    <string name="unit_label">Unit</string>
    <string name="kategori_barang_label">Kategori Barang</string>
    <string name="jumlah_pesanan_label">Jumlah Pesanan</string>
    <string name="nomor_referensi_label">Nomor Referensi</string>
    <string name="tanggal_pengiriman_label">Tanggal Pengiriman</string>
    <string name="batal_label">Batal</string>
    <string name="selesai_label">Selesai</string>
    <string name="pilih_tanggal_dan_waktu_label">Pilih Tanggal dan Waktu</string>
    <string name="input_nomor_referensi_label">Input Nomor Referensi</string>
    <string name="masukkan_nomor_referensi_hint">Masukkan Nomor Referensi</string>
    <string name="input_btn">Input</string>
    <string name="reference_input_error_label">Hanya Bisa maksimum 10 data</string>
    <string name="order_list_label">Order List</string>
    <string name="sender_label">Sender:</string>
    <string name="name_labe">Name: </string>
    <string name="phone_label">Phone :</string>
    <string name="district_label">District: </string>
    <string name="receiver_label">Receiver:</string>
    <string name="jumlah_order_label">Jumlah Order:</string>
    <string name="notes_label">Notes:</string>
</resources>