<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_pengirim_label" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtSenderNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtSenderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_pengirim_hint" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvNomorHandphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_hp_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:enabled="false"
                    android:gravity="center_horizontal"
                    android:inputType="none"
                    android:text="@string/country_code"
                    android:textAlignment="center" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtLayoutPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    app:errorEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/handphone_hint" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kecamatan_label" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtKecamatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <AutoCompleteTextView
                    android:id="@+id/edtKecamatanatc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:completionHint="@string/kecamatan_hint"
                    android:completionThreshold="1"
                    android:hint="@string/kecamatan_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat_label" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtLayoutAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAlamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/alamat_hint"
                    android:lines="4"
                    android:textAlignment="viewStart" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>